--- a/task/get-gpu-status.yaml
+++ b/task/get-gpu-status.yaml
@@ -1,10 +1,10 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-  name: get-status-gpu
+  name: get-gpu-status
   namespace: ops-system
 spec:
-  desc: get gpu status using nvidia-smi in special host
+  desc: use task `get-gpu-status` to get gpu status using nvidia-smi in specified host
   steps:
     - name: Check nvidia-smi
       content: command -v nvidia-smi
