--- a/task/add-hpa.yaml
+++ b/task/add-hpa.yaml
@@ -4,7 +4,7 @@ metadata:
   name: add-hpa
   namespace: ops-system
 spec:
-  desc: add hpa for deployment in specified namespace within a Kubernetes cluster.
+  desc: use task `add-hpa` to add hpa for deployment in specified namespace within a Kubernetes cluster.
   nodename: anymaster
   variables:
     name:
