--- a/task/install-grafana.yaml
+++ b/task/install-grafana.yaml
@@ -4,7 +4,7 @@ metadata:
   name: install-grafana
   namespace: ops-system
 spec:
-  desc: install grafana for Kubernetes
+  desc: use task `install-grafana` to install grafana for Kubernetes
   nodename: anymaster
   variables:
     namespace: monitor
