--- a/task/install-istio.yaml
+++ b/task/install-istio.yaml
@@ -4,7 +4,7 @@ metadata:
   name: install-istio
   namespace: ops-system
 spec:
-  desc: install istio in Kubernetes
+  desc: use task `install-istio` to install istio in Kubernetes
   nodename: anymaster
   variables:
     version: "1.13.7"
