--- a/task/install-longhorn.yaml
+++ b/task/install-longhorn.yaml
@@ -4,7 +4,7 @@ metadata:
   name: install-longhorn
   namespace: ops-system
 spec:
-  desc: install longhorn in Kubernetes
+  desc: use task `install-longhorn` to install longhorn in Kubernetes
   nodename: anymaster
   variables:
     action: apply
