--- a/task/install-metricsserver.yaml
+++ b/task/install-metricsserver.yaml
@@ -4,7 +4,7 @@ metadata:
   name: install-metricsserver
   namespace: ops-system
 spec:
-  desc: install metrics server for Kubernetes
+  desc: use task `install-metricsserver` to install metrics server for Kubernetes
   nodename: anymaster
   variables:
     proxy: https://mirror.ghproxy.com/
