--- a/task/install-openebs.yaml
+++ b/task/install-openebs.yaml
@@ -4,7 +4,7 @@ metadata:
   name: install-openebs
   namespace: ops-system
 spec:
-  desc: install openebs for Kubernetes
+  desc: use task `install-openebs` to install openebs for Kubernetes
   nodename: anymaster
   variables:
     action: apply
