--- a/task/list-pod.yaml
+++ b/task/list-pod.yaml
@@ -4,7 +4,7 @@ metadata:
   name: list-pod
   namespace: ops-system
 spec:
-  desc: list pods in specified namespace within a Kubernetes cluster
+  desc: use task `list-pod` to list pods in specified namespace within a Kubernetes cluster
   nodeName: anymaster
   variables:
     namespace: default
