--- a/task/push-file.yaml
+++ b/task/push-file.yaml
@@ -4,7 +4,7 @@ metadata:
   name: push-file
   namespace: ops-system
 spec:
-  desc: push local file to remote file example
+  desc: use task `push-file` push local file to remote file example
   steps:
     - name: Push To Remote
       remotefile: /etc/hosts
