--- a/task/set-docker-liverestore.yaml
+++ b/task/set-docker-liverestore.yaml
@@ -4,7 +4,7 @@ metadata:
   name: set-docker-liverestore
   namespace: ops-system
 spec:
-  desc: set docker live-restore for special host
+  desc: use task `set-docker-liverestore` to set docker live-restore for specified host
   steps:
     - name: Make Docker Etc Dir
       content: mkdir -p /etc/docker
