--- a/task/top-pod-bymem.yaml
+++ b/task/top-pod-bymem.yaml
@@ -4,7 +4,7 @@ metadata:
   name: top-pod-bymem
   namespace: ops-system
 spec:
-  desc: list topK usage memory of pods in specified namespace
+  desc: use task `top-pod-bymem` to list topK usage memory of pods in specified namespace
   nodeName: anymaster
   variables:
     namespace: default
