--- a/task/velero-status.yaml
+++ b/task/velero-status.yaml
@@ -4,7 +4,7 @@ metadata:
   name: velero-status
   namespace: ops-system
 spec:
-  desc: status Velero
+  desc: use task `velero-status` to status Velero
   variables:
     velero_version: v1.9.2
   steps:
