improvement: task template for copilot

--- a/task/drain-node.yaml
+++ b/task/drain-node.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   desc: use task `drain-node` to drain Kubernetes Node
   variables:
-    node_name: "what node you want to drain"
+    node_name: NEED_TO_BE_SPECIFIED_NODE_YOU_WANT_TO_DRAIN
   steps:
     - name: Cordon Node
       content: kubectl cordon ${node_name}
