--- a/task/clear-opstaskpod.yaml
+++ b/task/clear-opstaskpod.yaml
@@ -7,7 +7,7 @@ spec:
   nodename: anymaster
   desc: use task `clear-opstaskpod` to clear ops task pod in specified namespace within a Kubernetes cluster.
   variables:
-    namespace: NEED_TO_BE_SPECIFIED_NAMESPACE_YOU_WANT_TO_CLEAR
+    namespace: ops-system
   steps:
     - name: clear ops task pod
       content: kubectl -n ${namespace} delete  pod -l ops=task
