--- a/task/describe-pod.yaml
+++ b/task/describe-pod.yaml
@@ -7,8 +7,8 @@ spec:
   desc: use task `describe-pod` to get pod details info in specified namespace within a Kubernetes cluster.
   nodeName: anymaster
   variables:
-    namespace: NEED_TO_BE_SPECIFIED_NAMESPACE_YOU_WANT_TO_GET
-    podname: NEED_TO_BE_SPECIFIED_POD_YOU_WANT_TO_GET
+    namespace: ""
+    podname: ""
   steps:
     - name: get details
       content: "kubectl get pod -n ${namespace} ${podname} -o=json | jq '{Name: .metadata.name, Namespace: .metadata.namespace, Volumes: .spec.volumes, Node: .spec.nodeName, Events: .status.conditions}'"
