--- a/task/uncordon-node.yaml
+++ b/task/uncordon-node.yaml
@@ -7,7 +7,7 @@ spec:
   desc: use task `uncordon-node` to uncordon specified node in Kubernetes
   nodeName: anymaster
   variables:
-    node_name: NEED_TO_BE_SPECIFIED_NODE_YOU_WANT_TO_CORDON
+    node_name: ""
   steps:
     - name: uncordon node
       content: kubectl uncordon ${node_name}
