--- a/task/list-pods-abnormal.yaml
+++ b/task/list-pods-abnormal.yaml
@@ -1,10 +1,10 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-  name: list-pod-abnormal
+  name: list-pods-abnormal
   namespace: ops-system
 spec:
-  desc: use task `list-pod-abnormal` to list **abnormal pods*** in specified namespace within a Kubernetes cluster
+  desc: use task `list-pods-abnormal` to list **abnormal pods*** in specified namespace within a Kubernetes cluster
   nodeName: anymaster
   variables:
     namespace: default
