--- a/task/list-pods.yaml
+++ b/task/list-pods.yaml
@@ -1,10 +1,10 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-  name: list-pod
+  name: list-pods
   namespace: ops-system
 spec:
-  desc: use task `list-pod` to list **pods** in specified namespace within a Kubernetes cluster
+  desc: use task `list-pods` to list **pods** in specified namespace within a Kubernetes cluster
   nodeName: anymaster
   variables:
     namespace: default
