--- a/task/top-pods-bymem.yaml
+++ b/task/top-pods-bymem.yaml
@@ -1,10 +1,10 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-  name: top-pod-bymem
+  name: top-pods-bymem
   namespace: ops-system
 spec:
-  desc: use task `top-pod-bymem` to list topK usage memory of pods in specified namespace
+  desc: use task `top-pods-bymem` to list topK usage memory of pods in specified namespace
   nodeName: anymaster
   variables:
     namespace: default
