--- a/task/top-pods-bycpu.yaml
+++ b/task/top-pods-bycpu.yaml
@@ -15,11 +15,8 @@ spec:
       content: |
         if [ -n "${node_name}" ]; then
           FILTER="--field-selector spec.nodeName=${node_name}"
-        fi
-
-        if [ -n "${namespace}" ]; then
+        else if [ -n "${namespace}" ]; then
           NAMESPACE="-n ${namespace}" 
         fi
 
-        kubectl top pod ${NAMESPACE} ${FILTER} --sort-by=cpu \
-          | head -$((${topk}+1))
+        kubectl top pod ${NAMESPACE} ${FILTER} --sort-by=cpu | head -$((${topk}+1))
