--- a/task/top-pods-bymem.yaml
+++ b/task/top-pods-bymem.yaml
@@ -12,10 +12,4 @@ spec:
   steps:
     - name: list topK usage memory of pods
       content: |
-        if [ -n "${node_name}" ]; then
-          FILTER="--field-selector spec.nodeName=${node_name}"
-        else if [ -n "${namespace}" ]; then
-          NAMESPACE="-n ${namespace}" 
-        fi
-
-        kubectl top pod ${NAMESPACE} ${FILTER} --sort-by=memory | head -$((${topk}+1))
+        kubectl top pod -n ${namespace} --sort-by=memory | head -$((${topk}+1))
