--- a/task/top-pods-bycpu-node.yaml
+++ b/task/top-pods-bycpu-node.yaml
@@ -8,8 +8,9 @@ spec:
   nodeName: anymaster
   variables:
     node_name: ""
-    topk: "10"
+    topk: "20"
   steps:
     - name: list topK usage cpu of pods in specified node
       content: |
-        kubectl top pod --all-namespaces --sort-by=cpu | grep ${node_name} | head -$((${topk}+1))
+        echo "NAME                    CPU(m)          MEMORY(Mi) "
+        kubectl get pods -A -o wide | grep ${node_name} | awk '{print $1, $2}' | while read ns pod; do kubectl top pod  --no-headers -n "$ns" "$pod"; done 2>&1 | grep -v "NotFound" | awk '{gsub(/m|Mi/,"")}1' | sort -k2,2nr
