--- a/task/top-pods-bymem-node.yaml
+++ b/task/top-pods-bymem-node.yaml
@@ -13,4 +13,4 @@ spec:
     - name: list topK usage memory of pods in specified node
       content: |
         echo "NAME                    CPU(m)          MEMORY(Mi) "
-        kubectl get pods -A -o wide | grep ${node_name} | awk '{print $1, $2}' | while read ns pod; do kubectl top pod  --no-headers -n "$ns" "$pod"; done 2>&1 | grep -v "NotFound" | awk '{gsub(/m|Mi/,"")}1' | sort -k3,3nr
+        kubectl get pods -A -o wide | grep ${node_name} | awk '{print $1, $2}' | while read ns pod; do kubectl top pod  --no-headers -n "$ns" "$pod"; done 2>&1 | grep -v "NotFound" | awk '{sub(/m/, "", $2); sub(/Mi/, "", $3); print}' | sort -k3,3nr
