--- a/task/list-svcs.yaml
+++ b/task/list-svcs.yaml
@@ -1,10 +1,10 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-  name: list-svc
+  name: list-svcs
   namespace: ops-system
 spec:
-  desc: use task `list-svc` to list **svc** in specified namespace within a Kubernetes cluster
+  desc: use task `list-svcs` to list **svc** in specified namespace within a Kubernetes cluster
   variables:
     namespace: ops-system
   steps:
