--- a/task/check-gpu-drop.yaml
+++ b/task/check-gpu-drop.yaml
@@ -7,6 +7,8 @@ spec:
   desc: use task `check-gpu-drop` to check whether the gpu card has been dropped in specified host
   nodeName: anynode
   steps:
+    - name: Check nvidia-smi
+      content: command -v nvidia-smi
     - name: GPU Model
       content: nvidia-smi --query-gpu=gpu_name --format=csv,noheader
     - name: Check GPU Number Between lspci and nvidia-smi
