--- a/task/inspect-pod-logs.yaml
+++ b/task/inspect-pod-logs.yaml
@@ -1,10 +1,10 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-  name: inspect-pod-log
+  name: inspect-pod-logs
   namespace: ops-system
 spec:
-  desc: use task `inspect-pod-log` to get pod topk logs info within a Kubernetes cluster.
+  desc: use task `inspect-pod-logs` to get pod topk logs info within a Kubernetes cluster.
   nodeName: anymaster
   variables:
     podname: ""
