--- a/task/list-svcs.yaml
+++ b/task/list-svcs.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: ops-system
 spec:
   desc: use task `list-svcs` to list **svc** in specified namespace within a Kubernetes cluster
+  nodeName: anymaster
   variables:
     namespace: ops-system
   steps:
