--- a/task/uncordon-node.yaml
+++ b/task/uncordon-node.yaml
@@ -7,7 +7,7 @@ spec:
   desc: use task `uncordon-node` to uncordon specified node in Kubernetes
   nodeName: anymaster
   variables:
-    node_name: ""
+    node: ""
   steps:
     - name: uncordon node
-      content: kubectl uncordon ${node_name}
+      content: kubectl uncordon ${node}
