--- a/task/check-gpu-drop.yaml
+++ b/task/check-gpu-drop.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: ops-system
 spec:
   desc: use task `check-gpu-drop` to check whether the gpu card has been dropped in specified host
-  nodeName: anynode
+  nodeName: anymaster
   steps:
     - name: Check nvidia-smi
       content: command -v nvidia-smi
