--- a/task/get-gpu-status.yaml
+++ b/task/get-gpu-status.yaml
@@ -10,3 +10,11 @@ spec:
       content: command -v nvidia-smi
     - name: Show GPU Usage
       content: nvidia-smi --query-gpu=name,temperature.gpu,utilization.gpu,memory.total,utilization.memory --format=csv,noheader
+    - name: Show GPU Temperature
+      content: nvidia-smi --query-gpu=temperature.gpu --format=csv,noheader,nounits
+    - name: Find XID
+      content: |
+        if dmesg -T | grep -i "NVRM: Xid" > /dev/null; then echo "ERROR - Xid error found in dmesg"; else echo "OK - No Xid error found"; fi
+    - nmae: Check LSPCI FF
+      content: |
+        if lspci | grep -q "rev ff"; then echo "ERROR - 'rev ff' found in lspci output"; else echo "OK - No 'rev ff' found"; fi
