--- a/task/inspect-pod-logs-bysvc.yaml
+++ b/task/inspect-pod-logs-bysvc.yaml
@@ -7,10 +7,8 @@ spec:
   desc: use task `inspect-pod-logs-bysvc` to get pod topk logs info by specified svc\service to query within a Kubernetes cluster.
   nodeName: anymaster
   variables:
-    svc: ""
+    service: ""
     topk: "50"
   steps:
     - name: get pod topk logs by specified service
-      content: kubectl get svc --all-namespaces | grep ${svc} | awk '{print $1}' | xargs -L1 kubectl logs -l app=${svc} --tail=${topk} -n
-
-
+      content: kubectl get service --all-namespaces | grep ${service} | awk '{print $1}' | xargs -L1 kubectl logs -l app=${service} --tail=${topk} -n
