--- a/task/inspect-pod-logs-bysvc.yaml
+++ b/task/inspect-pod-logs-bysvc.yaml
@@ -8,7 +8,8 @@ spec:
   nodeName: anymaster
   variables:
     service: ""
+    svc: ""
     topk: "50"
   steps:
     - name: get pod topk logs by specified service
-      content: kubectl get service --all-namespaces | grep ${service} | awk '{print $1}' | xargs -L1 kubectl logs -l app=${service} --tail=${topk} -n
+      content: kubectl get service --all-namespaces | grep ${service}${svc} | awk '{print $1}' | xargs -L1 kubectl logs -l app=${service}${svc} --tail=${topk} -n
