--- a/task/get-podlogs-byname.yaml
+++ b/task/get-podlogs-byname.yaml
@@ -1,10 +1,10 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-  name: inspect-pod-logs
+  name: get-podlogs-byname
   namespace: ops-system
 spec:
-  desc: use task `inspect-pod-logs` to get pod topk logs info within a Kubernetes cluster.
+  desc: use task `get-podlogs-byname` to get pod topk logs by podname info within a Kubernetes cluster.
   nodeName: anymaster
   variables:
     podname: ""
