--- a/task/check-gpu-drop.yaml
+++ b/task/check-gpu-drop.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   desc: use task `check-gpu-drop` to check whether the gpu card has been dropped in specified host
   variables:
-    desired_gpu_count: 8
+    desired_gpu_count: "8"
   steps:
     - name: Check nvidia-smi
       content: command -v nvidia-smi
