--- a/task/get-podlogs-bysvc.yaml
+++ b/task/get-podlogs-bysvc.yaml
@@ -4,12 +4,11 @@ metadata:
   name: get-podlogs-bysvc
   namespace: ops-system
 spec:
-  desc: use task `get-podlogs-bysvc` to get pod topk logs info by svc\service name to query within a Kubernetes cluster.
+  desc: use task `get-podlogs-bysvc` to get pod topk logs info by service name to query in cluster, must to set `service`, avaliable to set `topk`
   nodeName: anymaster
   variables:
     service: ""
-    svc: ""
     topk: "50"
   steps:
     - name: get pod topk logs by service name
-      content: kubectl get service --all-namespaces | grep ${service}${svc} | awk '{print $1}' | xargs -L1 kubectl logs -l app=${service}${svc} --tail=${topk} -n
+      content: kubectl get service --all-namespaces | grep ${service} | awk '{print $1}' | xargs -L1 kubectl logs -l app=${service} --tail=${topk} -n
